Profile deletion: forbid fallback to guest profile.

BUG=669420

R=anthonyvd@chromium.org, bauerb@chromium.org

Review-Url: https://codereview.chromium.org/2538753002
Cr-Commit-Position: refs/heads/master@{#434993}